# HOS-ocean

./: .gitignore  .travis.yml  Dockerfile  README.txt  Readme.md  appveyor.yml  makefile  makefile_test_W_DYue
Benchmark/Convergence_RF/: waverf_L628_inf_ka02_N20_40.cof  waverf_L628_inf_ka035_N25_50.cof  waverf_L628_inf_ka03_N25_50.cof  waverf_L628_inf_ka04_N50_100.cof
cmake/: .gitignore  CMakeLists.txt  CMakeSources.cmake
cmake/cmake/: CMakeCompilationOptionsFortran.cmake  CMakeOutputDirectories.cmake  CMakePack.cmake  FindFFTW.cmake  FindGcov.cmake  Findcodecov.cmake  ParseArguments.cmake
sources/Benchmark/: check_W_DYue.f90  variables_3D_DYue.f90
sources/HOS/: HOS-ocean.f90  HOS_ocean.f90  energy_calc.f90  initial_condition.f90  input_HOS.f90  output.f90  resol_HOS.f90  runge_kutta.f90  variables_3D.f90  velocities.f90
sources/PostProcessing/: Post_processing.f90  analysis_wavefield.f90  input_post_process.f90  makefile  output_post_process.f90  read_files.f90  reconstruction.f90  variables_post_process.f90
sources/utilities/: Bivar.f90  RF_solution.f90  filters.f90  fourier_r2c_FFTW3.f90  linear_wave.f90  maths.f90  nrutil_tmp.f90  ramp.f90  random_numbers.f90  type.f90
